--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -689,7 +689,7 @@
         <phrase id="fldcaption" value="Physical Address" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Date Added" />
+        <phrase id="fldcaption" value="Submission Date" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
@@ -1528,7 +1528,7 @@
         <phrase id="fldcaption" value="ID" />
       </field>
       <field id="visit_type">
-        <phrase id="fldcaption" value="Visit Typ" />
+        <phrase id="fldcaption" value="Visit Type" />
       </field>
       <field id="created_by_user_id">
         <phrase id="fldcaption" value="created by user id" />
