--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,6 +1,6 @@
-<ew-language date="2025/1/1" id="en-US" author="e.World Technology Limited">
+<ew-language date="2025/1/2" id="en-US" author="e.World Technology Limited">
   <project>
-    <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
+    <phrase id="bodytitle" value="AfyaPlus | Health ERP platform for the modern health proffessionals" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
     <menu id="642">
       <phrase id="menutext" value="Dashboard" />
@@ -217,6 +217,15 @@
     </menu>
     <menu id="3">
       <phrase id="menutext" value="Designations" />
+    </menu>
+    <menu id="748">
+      <phrase id="menutext" value="Holidays" />
+    </menu>
+    <menu id="749">
+      <phrase id="menutext" value="Leave Categories" />
+    </menu>
+    <menu id="750">
+      <phrase id="menutext" value="Leave Applications" />
     </menu>
     <menu id="104">
       <phrase id="menutext" value="Reports" />
@@ -3002,6 +3011,66 @@
         <phrase id="fldtagcaption1" value="Yes" />
         <phrase id="fldtagvalue2" value="0" />
         <phrase id="fldtagcaption2" value="No" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Submission Date" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="holidays">
+      <phrase id="tblcaption" value="Holidays" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="holiday_name">
+        <phrase id="fldcaption" value="Holiday Name" />
+      </field>
+      <field id="date">
+        <phrase id="fldcaption" value="Start Date" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Submission Date" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="leave_categories">
+      <phrase id="tblcaption" value="Leave Categories" />
+      <field id="id">
+        <phrase id="fldcaption" value="Leave Category" />
+      </field>
+      <field id="leave_category">
+        <phrase id="fldcaption" value="Leave Category" />
+      </field>
+      <field id="maximum_days">
+        <phrase id="fldcaption" value="No of Days" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Sumbission Date" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="leave_applications">
+      <phrase id="tblcaption" value="Leave Applications" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="user_id">
+        <phrase id="fldcaption" value="Leave Category" />
+      </field>
+      <field id="leave_category_id">
+        <phrase id="fldcaption" value="Leave Category" />
+      </field>
+      <field id="days_applied">
+        <phrase id="fldcaption" value="No. of Days" />
+      </field>
+      <field id="status">
+        <phrase id="fldcaption" value="Status" />
       </field>
       <field id="date_created">
         <phrase id="fldcaption" value="Submission Date" />
