--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -179,6 +179,15 @@
     <menu id="53">
       <phrase id="menutext" value="Financials" />
     </menu>
+    <menu id="34">
+      <phrase id="menutext" value="Categories" />
+    </menu>
+    <menu id="36">
+      <phrase id="menutext" value="Subcategories" />
+    </menu>
+    <menu id="35">
+      <phrase id="menutext" value="Charges" />
+    </menu>
     <menu id="26">
       <phrase id="menutext" value="Payment Methods" />
     </menu>
@@ -199,15 +208,6 @@
     </menu>
     <menu id="16">
       <phrase id="menutext" value="Medical Schemes" />
-    </menu>
-    <menu id="34">
-      <phrase id="menutext" value="Service Categories" />
-    </menu>
-    <menu id="36">
-      <phrase id="menutext" value="Service Subcategories" />
-    </menu>
-    <menu id="35">
-      <phrase id="menutext" value="Facility Charges" />
     </menu>
     <menu id="49">
       <phrase id="menutext" value="Human Resources" />
@@ -1345,28 +1345,25 @@
       </field>
     </table>
     <table id="service_categories">
-      <phrase id="tblcaption" value="service categories" />
+      <phrase id="tblcaption" value="Charge Categories" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
+        <phrase id="fldcaption" value="S/NO" />
       </field>
       <field id="category_name">
-        <phrase id="fldcaption" value="category name" />
+        <phrase id="fldcaption" value="Category" />
       </field>
       <field id="description">
-        <phrase id="fldcaption" value="description" />
-      </field>
-      <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+        <phrase id="fldcaption" value="Description" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Submission Date" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="service_charges">
-      <phrase id="tblcaption" value="Facility Charges" />
+      <phrase id="tblcaption" value="Charges" />
       <field id="id">
         <phrase id="fldcaption" value="S/NO" />
       </field>
@@ -1382,38 +1379,32 @@
       <field id="cost">
         <phrase id="fldcaption" value="Cost (Kshs)" />
       </field>
-      <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+      <field id="date_created">
+        <phrase id="fldcaption" value="Date Added" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Last Update" />
+      </field>
+    </table>
+    <table id="service_subcategories">
+      <phrase id="tblcaption" value="Charge Subcategories" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="service_category_id">
+        <phrase id="fldcaption" value="Category" />
+      </field>
+      <field id="subcategory">
+        <phrase id="fldcaption" value="Subcategory" />
+      </field>
+      <field id="description">
+        <phrase id="fldcaption" value="Description" />
       </field>
       <field id="date_created">
         <phrase id="fldcaption" value="Date Added" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
-      </field>
-    </table>
-    <table id="service_subcategories">
-      <phrase id="tblcaption" value="service subcategories" />
-      <field id="id">
-        <phrase id="fldcaption" value="id" />
-      </field>
-      <field id="service_category_id">
-        <phrase id="fldcaption" value="service category id" />
-      </field>
-      <field id="subcategory">
-        <phrase id="fldcaption" value="subcategory" />
-      </field>
-      <field id="description">
-        <phrase id="fldcaption" value="description" />
-      </field>
-      <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
-      </field>
-      <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
-      </field>
-      <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
       </field>
     </table>
     <table id="users">
