--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -110,6 +110,9 @@
     <menu id="645">
       <phrase id="menutext" value="Patients List" />
     </menu>
+    <menu id="856">
+      <phrase id="menutext" value="Admissions" />
+    </menu>
     <menu id="50">
       <phrase id="menutext" value="Doctor Panel" />
     </menu>
@@ -3078,6 +3081,9 @@
       <field id="leave_category_id">
         <phrase id="fldcaption" value="Leave Category" />
       </field>
+      <field id="start_from_date">
+        <phrase id="fldcaption" value="Start Date" />
+      </field>
       <field id="days_applied">
         <phrase id="fldcaption" value="No. of Days" />
       </field>
@@ -3200,6 +3206,9 @@
       <field id="id">
         <phrase id="fldcaption" value="S/NO" />
       </field>
+      <field id="floor_id">
+        <phrase id="fldcaption" value="Floor" />
+      </field>
       <field id="ward_type_id">
         <phrase id="fldcaption" value="Ward Type" />
       </field>
@@ -3207,10 +3216,22 @@
         <phrase id="fldcaption" value="Ward Name" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Last Updated" />
+        <phrase id="fldcaption" value="Date Added" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="patient_admissions">
+      <phrase id="tblcaption" value="Admissions" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="patient_id">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Admission Date" />
       </field>
     </table>
   </project>
