--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,4 +1,4 @@
-<ew-language date="2025/1/5" id="en-US" author="e.World Technology Limited">
+<ew-language date="2025/1/6" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Health ERP platform for the modern health proffessionals" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
@@ -250,6 +250,9 @@
     </menu>
     <menu id="49">
       <phrase id="menutext" value="Human Resources" />
+    </menu>
+    <menu id="1022">
+      <phrase id="menutext" value="Employees Details" />
     </menu>
     <menu id="2">
       <phrase id="menutext" value="Departments" />
@@ -3492,6 +3495,36 @@
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="employees_view">
+      <phrase id="tblcaption" value="Employees Details" />
+      <field id="id">
+        <phrase id="fldcaption" value="Employee ID" />
+      </field>
+      <field id="employee_name">
+        <phrase id="fldcaption" value="Name" />
+      </field>
+      <field id="national_id">
+        <phrase id="fldcaption" value="National ID" />
+      </field>
+      <field id="gender">
+        <phrase id="fldcaption" value="Gender" />
+      </field>
+      <field id="phone">
+        <phrase id="fldcaption" value="Phone" />
+      </field>
+      <field id="_email">
+        <phrase id="fldcaption" value="Email" />
+      </field>
+      <field id="department_name">
+        <phrase id="fldcaption" value="Department" />
+      </field>
+      <field id="designation">
+        <phrase id="fldcaption" value="Designation" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Registration Date" />
       </field>
     </table>
   </project>
