--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,4 +1,4 @@
-<ew-language date="2025/1/6" id="en-US" author="e.World Technology Limited">
+<ew-language date="2025/1/7" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Health ERP platform for the modern health proffessionals" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
@@ -28,6 +28,9 @@
     </menu>
     <menu id="331">
       <phrase id="menutext" value="Financials" />
+    </menu>
+    <menu id="1024">
+      <phrase id="menutext" value="Human Resources" />
     </menu>
     <menu id="103">
       <phrase id="menutext" value="Administrator" />
@@ -302,11 +305,14 @@
     <menu id="318">
       <phrase id="menutext" value="Vaccinations" />
     </menu>
+    <menu id="1023">
+      <phrase id="menutext" value="Employees" />
+    </menu>
     <menu id="441">
       <phrase id="menutext" value="Laboratory" />
     </menu>
     <menu id="333">
-      <phrase id="menutext" value="Radiology Report" />
+      <phrase id="menutext" value="Radiology" />
     </menu>
     <menu id="313">
       <phrase id="menutext" value="Medicine Stock" />
@@ -3526,6 +3532,54 @@
       <field id="date_created">
         <phrase id="fldcaption" value="Registration Date" />
       </field>
+    </table>
+    <table id="employees_report">
+      <phrase id="tblcaption" value="Employees Report" />
+      <chart id="employeesbygender">
+        <phrase id="chartcaption" value="Employees By Gender" />
+        <phrase id="chartxaxisname" value="Gender" />
+        <phrase id="chartyaxisname" value="Gender" />
+      </chart>
+      <chart id="employeesbydepartment">
+        <phrase id="chartcaption" value="Employees by Department" />
+        <phrase id="chartxaxisname" value="Department" />
+        <phrase id="chartyaxisname" value="Department" />
+      </chart>
+      <chart id="employeesbydesignation">
+        <phrase id="chartcaption" value="Employees by Designation" />
+        <phrase id="chartxaxisname" value="Designation" />
+        <phrase id="chartyaxisname" value="Designation" />
+      </chart>
+      <field id="id">
+        <phrase id="fldcaption" value="Employee ID" />
+      </field>
+      <field id="employee_name">
+        <phrase id="fldcaption" value="Name" />
+      </field>
+      <field id="national_id">
+        <phrase id="fldcaption" value="National ID" />
+      </field>
+      <field id="gender">
+        <phrase id="fldcaption" value="Gender" />
+      </field>
+      <field id="phone">
+        <phrase id="fldcaption" value="Phone" />
+      </field>
+      <field id="_email">
+        <phrase id="fldcaption" value="Email" />
+      </field>
+      <field id="department_name">
+        <phrase id="fldcaption" value="Department" />
+      </field>
+      <field id="designation">
+        <phrase id="fldcaption" value="Designation" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Registration Date" />
+      </field>
+    </table>
+    <table id="human_resources_overview">
+      <phrase id="tblcaption" value="Human Resources Overview" />
     </table>
   </project>
 </ew-language>
