--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,4 +1,4 @@
-<ew-language date="2025/1/8" id="en-US" author="e.World Technology Limited">
+<ew-language date="2025/1/9" id="en-US" author="e.World Technology Limited">
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Health ERP platform for the modern health proffessionals" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
@@ -458,19 +458,19 @@
     <table id="designations">
       <phrase id="tblcaption" value="Designations" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
+        <phrase id="fldcaption" value="S/NO" />
       </field>
       <field id="designation">
-        <phrase id="fldcaption" value="designation" />
+        <phrase id="fldcaption" value="Designation" />
       </field>
       <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+        <phrase id="fldcaption" value="User ID" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Submission Dare" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="diagnosis">
@@ -1544,6 +1544,10 @@
         <phrase id="fldtagcaption11" value="Human Resources" />
         <phrase id="fldtagvalue12" value="9" />
         <phrase id="fldtagcaption12" value="Records Officer" />
+        <phrase id="fldtagvalue13" value="10" />
+        <phrase id="fldtagcaption13" value="Procurement Officer" />
+        <phrase id="fldtagvalue14" value="11" />
+        <phrase id="fldtagcaption14" value="Stores Manager" />
       </field>
       <field id="is_verified">
         <phrase id="fldcaption" value="Active?" />
